<resources>
    <string name="app_name">Pricify</string>
    <string name="app_description">Industry leading price tracking</string>
    <string name="login_btn">Log In</string>
    <string name="pricify">Pricify</string>
    <string name="signup_btn">Sign Up</string>
    <string name="home_welcome">Welcome To Pricify</string>
    <string name="wishlists_btn">WishLists</string>
    <string name="settings_btn">Settings</string>
    <string name="logout_btn">Log Out</string>
    <string name="wishlist_btn">WishList1</string>
    <string name="register_name_hint">Full Name</string>
    <string name="register_age_hint">Age</string>
    <string name="password_hint">Password</string>
    <string name="email_address_hint">Email Address</string>
    <string name="register_button_text">REGISTER USER</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="register_text">Register</string>
    <string name="wishlist_name">WishList Name</string>
    <string name="item_name">Item Name</string>
    <string name="profile_btn">Profile</string>
    <string name="notifications_btn">Notifications</string>
    <string name="acc_privacy_btn">Account and Privacy</string>
    <string name="orders_btn">Orders</string>
    <string name="payment_btn">Payment Methods</string>
    <string name="profileNameTitle">Name:</string>
    <string name="profileName" />
    <string name="profileEmailAddress" />
    <string name="profileEmailAddressTitle">Email Address:</string>
    <string name="profileGreeting" />
    <string name="item_count">Item Count: %1$s</string>
    <string name="total_price">Total Price: $%.2f</string>
    <string name="item_price">Price: $%.2f</string>
    <string name="price_drop">Price Drop: $%.2f</string>
    <string name="add_new_item">Add New Item</string>
    <string name="add_new_wishlist">Add New Wishlist</string>
    <string name="save">Save</string>
    <string name="item_url">Item URL</string>
    <string name="monitor_price">Monitor Price Change</string>
    <string name="enter_price">Item Price</string>
    <string name="enter_price_drop">Price drop threshold</string>
    <string name="item_image_url">Item Image URL</string>
    <string name="feedback_btn">Feedback</string>
    <string name="empty_img_url">https://cdn-icons-png.flaticon.com/512/1201/1201867.png</string>
    <string name="delete_item">Delete Item</string>


</resources>