<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:minWidth="250dp"
        android:text="@string/profile_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/orders_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders_btn"
        android:minWidth="250dp"
        app:layout_constraintStart_toStartOf="@id/profile_btn"
        app:layout_constraintTop_toBottomOf="@id/profile_btn" />

    <Button
        android:id="@+id/payment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_btn"
        android:minWidth="250dp"
        app:layout_constraintStart_toStartOf="@id/orders_btn"
        app:layout_constraintTop_toBottomOf="@id/orders_btn" />

    <Button
        android:id="@+id/notifications_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_btn"
        android:minWidth="250dp"
        app:layout_constraintStart_toStartOf="@id/payment_btn"
        app:layout_constraintTop_toBottomOf="@id/payment_btn" />

    <Button
        android:id="@+id/acc_privacy_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acc_privacy_btn"
        android:minWidth="250dp"
        app:layout_constraintStart_toStartOf="@id/notifications_btn"
        app:layout_constraintTop_toBottomOf="@id/notifications_btn" />



</androidx.constraintlayout.widget.ConstraintLayout>