<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/greetingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_welcome"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/wishlists_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/wishlists_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:minWidth="250dp"
        android:minHeight="50dp"
        android:text="@string/wishlists_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_btn"
        android:layout_marginBottom="400dp"
        android:minWidth="250dp"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="@id/wishlists_btn"
        app:layout_constraintTop_toBottomOf="@id/wishlists_btn" />

    <Button
        android:id="@+id/feedback_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_btn"
        android:layout_marginBottom="400dp"
        android:minWidth="250dp"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="@id/profile_btn"
        app:layout_constraintTop_toBottomOf="@id/profile_btn" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_btn"
        android:layout_marginBottom="400dp"
        android:minWidth="250dp"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="@id/feedback_btn"
        app:layout_constraintTop_toBottomOf="@id/feedback_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>